--- a/static/css/tv2_observables.css
+++ b/static/css/tv2_observables.css
@@ -1,16 +1,14 @@
-.button {
-    background-color: gainsboro;
-    border: black 1px solid;
-    box-shadow: black 2px 2px;
-    text-align: center;
-    width: 90px;
-}
-.button:active {
-    box-shadow: dimgray -2px -2px;
-}
-.button_create {
+/*.button {*/
+/*    background-color: gainsboro;*/
+/*    border: black 1px solid;*/
+/*    box-shadow: black 2px 2px;*/
+/*    text-align: center;*/
+/*    width: 90px;*/
+/*}*/
+/*.button:active {*/
+/*    box-shadow: dimgray -2px -2px;*/
+/*}*/
 
-}
 .button_delete {
     background-color: red;
     color: white;
@@ -30,13 +28,14 @@
     color: white;
     width: 40px;
 }
-.button_close_x {
-    border: black 1px solid;
-    box-shadow: black 2px 2px;
-    padding: 4px;
-    width: 15px ;
-}
+/*.button_close_x {*/
+/*    border: black 1px solid;*/
+/*    box-shadow: black 2px 2px;*/
+/*    padding: 4px;*/
+/*    width: 15px ;*/
+/*}*/
 #clear_find_obs_by_text {
+    text-decoration: underline;
     font-style: italic;
     display: inline;
 }
@@ -53,12 +52,14 @@
 }
 .obs_container {
     border: 2px solid;
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
     font-size: small;
     width: 20%;
     max-width: 500px;
-    overflow-wrap: break-word;
+    padding: 5px;
+    overflow-wrap: anywhere;
 }
 #obs_confirm_delete_container {
     border: black 1px solid;
@@ -128,6 +129,7 @@
 .observed_container {
     border: 2px solid;
     margin: 2px;
+    padding: 3px;
     /*width: 100%;*/
 }
 .observed_list {
@@ -157,14 +159,16 @@
     align-items: center;
     display: flex;
     flex-direction: row-reverse;
+    flex-wrap: wrap;
     gap: 10px;
+    margin-bottom: 5px;
 }
 #obs_update_error_message {
     display: none;
 }
 .recorded_obs_show {
     align-items: center;
-    border-top: 1px solid black;
+    border-top: 1px solid rgb(115, 115, 115);
     display: flex;
     flex-direction: row;
     justify-content: center;
